HBASE-29597 Supply meta table name for replica to the tests in TestMe… (#7325)
* HBASE-29597 Supply meta table name for replica to the tests in TestMetaTableForReplica class

* HBASE-29597 Supply meta table name for replica to the tests in TestMetaTableForReplica class